alignment correction

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,8 @@ body{
   } */
   .hours{
     position: absolute;
-    margin-left: 45%;
+    margin-left: 50%;
+    margin-top: 1%;
   }
 
 
@@ -45,13 +46,13 @@ body{
       }
       .hours{
         position: absolute;
-        margin-left: 45%;
+        margin-left: 50%;
       }
       .bgBox__video{
         width: 100%;
         height: 100%;
         margin-top: 0;
-        transform: rotate(90deg) scale(2.5);
+        transform: rotate(-90deg) scale(2.5);
         position:fixed;
         /* transform: scaleY(5); */
         z-index: -1;
@@ -93,13 +94,13 @@ body{
   }
   .hours{
     position: absolute;
-    margin-left: 45%;
+    margin-left: 50%;
   }
   .bgBox__video{
     width: 100%;
     height: 100%;
     margin-top: 0;
-    transform: rotate(90deg) scale(2.5);
+    transform: rotate(-90deg) scale(2.5);
     position:fixed;
     /* transform: scaleY(5); */
     z-index: -1;
